[workspace]
members = [
    "animation-api",
    "animation-macros",
    "animation-template-native",
    "animation-template-wasm",
    "animation-utils",
    "animation-wasm-bindings",
    "animation-wrapper",
    "light-client",
    "configurator",
    "animator",
    "lightfx",
    "webapi",
    "webapi-client",
    "webapi-model",
    "webui",
    "visualizer",
    "events",
    "animations/*",
]
resolver = "2"
