[package]
name = "animation-template-native"
version = "0.1.0"
edition = "2024"

[dependencies]
animation-utils = { git = "https://github.com/mrozycki/rustmas", rev = "835ad9e" }
animation-api = { git = "https://github.com/mrozycki/rustmas", rev = "835ad9e" }
lightfx = { git = "https://github.com/mrozycki/rustmas", rev = "835ad9e" }

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
