[package]
name = "animation-template-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
animation-utils = { git = "https://github.com/mrozycki/rustmas", rev = "835ad9e" }
animation-api = { git = "https://github.com/mrozycki/rustmas", rev = "835ad9e" }
lightfx = { git = "https://github.com/mrozycki/rustmas", rev = "835ad9e" }

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

[dependencies.animation-wasm-bindings]
git = "https://github.com/mrozycki/rustmas"
rev = "835ad9e"
default-features = false
features = ["guest"]
