[package]
name = "animation-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightfx = { path = "../lightfx" }
animation-api = { path = "../animation-api" }
animation-macros = { path = "../animation-macros" }

serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
rand = "0.8.5"
nalgebra = "0.31"
