[package]
name = "animation-wasm-bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
animation-api = { path = "../animation-api" }
lightfx = { path = "../lightfx" }

itertools = "0.13.0"
serde = "1.0.215"
serde_json = "1.0.132"
wit-bindgen = { version = "0.35.0", optional = true }
wasmtime = { version = "27.0.0", optional = true }
wasmtime-wasi = { version = "27.0.0", optional = true }
thiserror = "2.0.3"
log = "0.4.22"
tokio = { version = "1.43.1", optional = true }


[features]
default = ["guest", "host"]
guest = ["wit-bindgen"]
host = ["wasmtime", "wasmtime-wasi", "tokio"]
