[package]
name = "animation-wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
animation-api = { path = "../animation-api" }

serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tar = "0.4.43"
thiserror = "2.0.3"
toml = "0.8.19"

[features]
default = ["wrap", "unwrap"]
wrap = []
unwrap = []
