[package]
name = "animations"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "barber_pole"
path = "src/barber_pole.rs"

[[bin]]
name = "beats"
path = "src/beats.rs"

[[bin]]
name = "check"
path = "src/check.rs"

[[bin]]
name = "color_picker"
path = "src/color_picker.rs"

[[bin]]
name = "circle_boom"
path = "src/circle_boom.rs"

[[bin]]
name = "circle_grid"
path = "src/circle_grid.rs"

[[bin]]
name = "circle_wave"
path = "src/circle_wave.rs"

[[bin]]
name = "heartbeat"
path = "src/heartbeat.rs"

[[bin]]
name = "classic"
path = "src/classic.rs"

[[bin]]
name = "doom_fire"
path = "src/doom_fire.rs"

[[bin]]
name = "particle_fire"
path = "src/particle_fire.rs"

[[bin]]
name = "detection_status"
path = "src/detection_status.rs"

[[bin]]
name = "indexing"
path = "src/indexing.rs"

[[bin]]
name = "lightspeed"
path = "src/lightspeed.rs"

[[bin]]
name = "manual_sweep"
path = "src/manual_sweep.rs"

[[bin]]
name = "moon"
path = "src/moon.rs"

[[bin]]
name = "pillars"
path = "src/pillars.rs"

[[bin]]
name = "present"
path = "src/present.rs"

[[bin]]
name = "rainbow_cable"
path = "src/rainbow_cable.rs"

[[bin]]
name = "rainbow_cylinder"
path = "src/rainbow_cylinder.rs"

[[bin]]
name = "rainbow_halves"
path = "src/rainbow_halves.rs"

[[bin]]
name = "rainbow_sphere"
path = "src/rainbow_sphere.rs"

[[bin]]
name = "rainbow_spiral"
path = "src/rainbow_spiral.rs"

[[bin]]
name = "rainbow_waterfall"
path = "src/rainbow_waterfall.rs"

[[bin]]
name = "random_sweep"
path = "src/random_sweep.rs"

[[bin]]
name = "single_color"
path = "src/single_color.rs"

[[bin]]
name = "snow"
path = "src/snow.rs"

[[bin]]
name = "spinning_halves"
path = "src/spinning_halves.rs"

[[bin]]
name = "stars"
path = "src/stars.rs"

[[bin]]
name = "sweep"
path = "src/sweep.rs"

[[bin]]
name = "event_test"
path = "src/event_test.rs"

[[bin]]
name = "audio_visualizer"
path = "src/audio_visualizer.rs"

[[bin]]
name = "audio_wave"
path = "src/audio_wave.rs"

[[bin]]
name = "midi_wave"
path = "src/midi_wave.rs"

[dependencies]
animation-utils = { path = "../animation-utils" }
animation-api = { path = "../animation-api" }
lightfx = { path = "../lightfx" }

log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
itertools = "0.10.5"
nalgebra = "0.31"
rand = "0.8.5"
bracket-noise = "0.8"
cpal = "0.15.2"
env_logger = "0.10.0"
rustfft = "6.1.0"
midi-msg = "0.4.0"
