[package]
name = "animations"
version = "0.1.0"
edition = "2021"

[dependencies]
animation-utils = { path = "../animation-utils" }
animation-api = { path = "../animation-api" }
lightfx = { path = "../lightfx" }

log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
itertools = "0.10.5"
nalgebra = "0.31"
rand = "0.8.5"
bracket-noise = "0.8"
env_logger = "0.10.0"
rustfft = "6.1.0"
midi-msg = "0.4.0"
