[package]
name = "rustmas-animator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "animator-cli"
path = "src/cli.rs"

[dependencies]
rustmas-light-client = { path = "../light-client", default-features = false }
lightfx = { path = "../lightfx" }
animation-api = { path = "../animation-api" }
events = { path = "../events" }

csv = "1.1.6"
chrono = "0.4.30"
clap = { version = "4.0.18", features = ["derive"] }
glob = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0.40"

[features]
default = []
visualiser = ["rustmas-light-client/visualiser"]
websocket = ["rustmas-light-client/websocket"]
