[package]
name = "rustmas-animator"
version = "0.1.0"
edition = "2024"

[dependencies]
rustmas-light-client = { path = "../light-client", default-features = false }
animation-wrapper = { path = "../animation-wrapper", default-features = false, features = [
    "unwrap",
] }
lightfx = { path = "../lightfx" }
animation-api = { path = "../animation-api" }
events = { path = "../events", default-features = false }

csv = "1.1.6"
chrono = "0.4.30"
glob = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

log = "0.4.17"
thiserror = "1.0.60"
itertools = "0.13.0"
async-trait = "0.1.83"

[dependencies.animation-wasm-bindings]
path = "../animation-wasm-bindings"
default-features = false
features = ["host"]

[features]
default = ["midi", "audio"]
audio = ["events/audio"]
midi = ["events/midi"]
