[package]
name = "rustmas-bevy-visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.2.1"
ewebsock = "0.4.0"
itertools = "0.12.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.108"

[dependencies.bevy]
version = "0.11.0"
default-features = false
features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "x11",
    "ktx2",
    "tonemapping_luts",
    "zstd",
]
