[package]
name = "rustmas-bevy-visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
ewebsock = "0.4.0"
itertools = "0.12.0"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.108"
url = "2.5.0"

[dependencies.bevy]
version = "0.12.0"
default-features = false
features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "x11",
    "ktx2",
    "tonemapping_luts",
    "zstd",
]
