[package]
name = "rustmas-configurator"
version = "0.1.0"
edition = "2021"

[dependencies]
rustmas-light-client = { path = "../light-client", default-features = false }
lightfx = { path = "../lightfx" }

csv = "1.1.6"
clap = { version = "4.0.8", features = ["derive"] }
indicatif = "0.17.1"
itertools = "0.10.5"
opencv = "0.70"
serde = { version = "1.0", features = ["derive"] }
nalgebra = "0.31.4"
statistical = "1.0.0"
tokio = { version = "1", features = ["full"] }

log = "0.4.17"
simplelog = "0.12.0"
chrono = "0.4.22"
