[package]
name = "rustmas-configurator"
version = "0.1.0"
edition = "2021"

[dependencies]
rustmas-light-client = { path = "../light-client", default-features = false }
lightfx = { path = "../lightfx" }

chrono = "0.4.30"
clap = { version = "4.0.8", features = ["derive", "string"] }
csv = "1.1.6"
indicatif = "0.17.1"
itertools = "0.10.5"
opencv = { version = "0.91", features = ["clang-runtime"] }
serde = { version = "1.0", features = ["derive"] }
nalgebra = "0.31.4"
statistical = "1.0.0"
tokio = { version = "1", features = ["full"] }

log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0.60"
