[package]
name = "events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
animation-api = { path = "../animation-api" }
cpal = "0.15.2"
itertools = "0.11.0"
rustfft = "6.1.0"
log = "0.4.20"

tokio = { version = "1", features = ["full"] }
anyhow = "1.0.75"
