[package]
name = "events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
animation-api = { path = "../animation-api" }

anyhow = "1.0.75"
cpal = { version = "0.15.2", optional = true }
itertools = "0.11.0"
tracing = { workspace = true }
midi-msg = { version = "0.4.0", optional = true }
midir = { version = "0.9.1", optional = true }
rustfft = { version = "6.1.0", optional = true }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }

[features]
default = ["midi", "audio"]
audio = ["dep:cpal", "dep:rustfft"]
midi = ["dep:midi-msg", "dep:midir"]
