[package]
name = "rustmas-light-client"
version = "0.1.0"
edition = "2021"

[dependencies]
lightfx = { path = "../lightfx" }

async-trait = "0.1.57"
csv = "1.1.6"
futures-util = "0.3.28"
log = "0.4.17"
reqwest = "0.11.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serialport = "4.3.0"
