[package]
name = "rustmas-light-client"
version = "0.1.0"
edition = "2024"

[dependencies]
lightfx = { path = "../lightfx" }

async-trait = "0.1.57"
bytes = "1.11.1"
chrono = "0.4.31"
futures-util = "0.3.28"
itertools = "0.12.0"
log = "0.4.17"
reqwest = "0.11.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.3.0"
thiserror = "1.0.60"
tokio = { version = "1", features = ["full"] }
url = { version = "2.5.2", features = ["serde"] }
