[package]
name = "rustmas-visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
rustmas-webapi-client = { path = "../webapi-client", features = ["visualizer"] }

clap = { version = "4.4.11", features = ["derive"] }
ewebsock = "0.4.0"
itertools = "0.12.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.108"
url = "2.5.0"

[dependencies.bevy]
version = "0.14.2"
default-features = false
features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "x11",
    "ktx2",
    "tonemapping_luts",
    "zstd",
    "webgl2",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread"] }
