[package]
name = "rustmas-webapi-client"
version = "0.1.0"
edition = "2021"

[dependencies]
animation-api = { path = "../animation-api" }

reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
url = "2.5.0"

[features]
default = []
visualizer = []
