[package]
name = "rustmas-webapi-client"
version = "0.1.0"
edition = "2024"

[dependencies]
webapi-model = { path = "../webapi-model", features = ["yew"] }

reqwest = { version = "0.11.12", features = ["json"] }
serde = "1.0.193"
thiserror = "1.0.60"
url = "2.5.0"

[features]
default = []
visualizer = []
