[package]
name = "rustmas-webapi-client"
version = "0.1.0"
edition = "2024"

[dependencies]
webapi-model = { path = "../webapi-model", features = ["yew"] }

reqwest = { version = "0.11.12", features = ["json"] }
serde = "1.0.193"
thiserror = "1.0.60"
url = "2.5.0"

web-sys = { version = "0.3.60", features = ["FormData"], optional = true }
gloo-net = { version = "0.6.0", optional = true }

[features]
default = []
visualizer = []
js = ["dep:web-sys", "dep:gloo-net"]
