[package]
name = "webapi-model"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
animation-api = { path = "../animation-api" }
lightfx = { path = "../lightfx" }
serde = { version = "1.0.193", features = ["derive"] }

[features]
default = []
yew = ["animation-api/yew"]
