[package]
name = "rustmas-webapi"
version = "0.1.0"
edition = "2021"

[dependencies]
rustmas-animator = { path = "../animator", default-features = false }

actix-cors = "0.6.4"
actix-web = "4"
actix-files = "0.6.2"
dotenvy = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "runtime-actix-rustls", "sqlite" ] }

log = "0.4.17"
simplelog = "0.12.0"

[features]
default = []
visualiser = ["rustmas-animator/visualiser"]