[package]
name = "rustmas-webapi"
version = "0.1.0"
edition = "2021"

[dependencies]
rustmas-animator = { path = "../animator", default-features = false }

actix-cors = "0.6.4"
actix-web = "4"
actix-files = "0.6.2"
dotenvy = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "runtime-actix-rustls", "sqlite" ] }
tokio = "1.27.0"

log = "0.4.17"
env_logger = "0.10.0"

[features]
default = []
visualiser = ["rustmas-animator/visualiser"]
