[package]
name = "rustmas-webapi"
version = "0.1.0"
edition = "2021"

[dependencies]
rustmas-animator = { path = "../animator", default-features = false }
lightfx = { path = "../lightfx" }
webapi-model = { path = "../webapi-model" }

actix-web-actors = "4.2.0"
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4"
actix-files = "0.6.2"
async-stream = "0.3.5"
dotenvy = "0.15.6"
futures-core = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = "1.27.0"

log = "0.4.17"
env_logger = "0.10.0"

[features]
default = ["midi", "audio"]
audio = ["rustmas-animator/audio"]
midi = ["rustmas-animator/midi"]
