[package]
name = "rustmas-webui"
version = "0.1.0"
edition = "2021"

[dependencies]
lightfx = { path = "../lightfx" }

gloo-net = "0.2"
gloo-utils = "0.1"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.60", features = ["FormData", "HtmlFormElement"] }
yew = "0.19"
