[package]
name = "rustmas-webui"
version = "0.1.0"
edition = "2021"

[dependencies]
lightfx = { path = "../lightfx" }
animation-api = { path = "../animation-api" }

gloo-net = "0.2"
gloo-utils = "0.1"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
log = "0.4.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.60", features = ["FormData", "HtmlFormElement", "HtmlSelectElement"] }
yew = "0.19"
