[package]
name = "rustmas-webui"
version = "0.1.0"
edition = "2024"

[dependencies]
lightfx = { path = "../lightfx" }
animation-api = { path = "../animation-api" }
rustmas-visualizer = { path = "../visualizer", optional = true }
rustmas-webapi-client = { path = "../webapi-client" }

gloo-utils = "0.1"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
log = "0.4.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.60", features = [
    "DomRect",
    "Element",
    "FormData",
    "HtmlAnchorElement",
    "HtmlFormElement",
    "HtmlSelectElement",
    "HtmlDialogElement",
    "Screen",
] }
yew = { version = "0.21", features = ["csr"] }
url = "2.5.0"
yew-router = "0.18.0"

[features]
default = []
local = []
visualizer = ["rustmas-visualizer", "rustmas-webapi-client/visualizer"]
