[package]
name = "rustmas-animation-doom-fire"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
animation-utils = { path = "../../animation-utils" }
animation-api = { path = "../../animation-api" }
lightfx = { path = "../../lightfx" }

serde = "1.0.215"
nalgebra = "0.33.2"
rand = "0.9.2"

[dependencies.animation-wasm-bindings]
path = "../../animation-wasm-bindings"
default-features = false
features = ["guest"]
