[package]
name = "rustmas-animation-heartbeat"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
animation-utils = { path = "../../animation-utils" }
animation-api = { path = "../../animation-api" }
lightfx = { path = "../../lightfx" }

serde = "1.0.215"

[dependencies.animation-wasm-bindings]
path = "../../animation-wasm-bindings"
default-features = false
features = ["guest"]
